# CrossyRoadHaskell-Li1

./: 2022li1g016.cabal  LICENSE  README.md
doc/Documentação/: Bot.html  Tarefa2_2022li1g016.html  Tarefa4_2022li1g016.html  doc-index.html
doc/Tarefa1/: Tarefa1_2022li1g016.html
doc/Tarefa3/: Tarefa3_2022li1g016.html
doc/Tarefa5/: Tarefa5_2022li1g016.html
doc/Tarefa6/: Main.html  index.html
src/: Bot.hs  LI12223.hs  Main.hs  Tarefa1_2022li1g016.hs  Tarefa2_2022li1g016.hs  Tarefa3_2022li1g016.hs  Tarefa4_2022li1g016.hs  Tarefa5_2022li1g016.hs  Tarefa6_2022li1g016.hs
tests/: Bot_Spec.hs  Spec.hs  Tarefa1_2022li1g016_Spec.hs  Tarefa2_2022li1g016_Spec.hs  Tarefa3_2022li1g016_Spec.hs  Tarefa4_2022li1g016_Spec.hs  Tarefa5_2022li1g016_Spec.hs
