cabal-version:      2.4
name:               2022li1g016
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Daniel Silva <a104086@alunos.uminho.pt>
                    Hélder Gomes <a104100@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g016
    Tarefa2_2022li1g016
    Tarefa3_2022li1g016
    Tarefa4_2022li1g016
  build-depends:    base ^>=4.16.3.0, random, gloss, HUnit
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g016
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g016
    Tarefa2_2022li1g016
    Tarefa3_2022li1g016
    Tarefa4_2022li1g016
  build-depends:    base ^>=4.16.3.0, random, gloss, HUnit
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g016-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g016
    Tarefa2_2022li1g016
    Tarefa3_2022li1g016
    Tarefa4_2022li1g016
    Tarefa1_2022li1g016_Spec
    Tarefa2_2022li1g016_Spec
    Tarefa3_2022li1g016_Spec
    Tarefa4_2022li1g016_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
